--- a/levels/settings/mp_rr_desertlands_64k_x_64k_nx.json
+++ b/levels/settings/mp_rr_desertlands_64k_x_64k_nx.json
@@ -1,7 +1,10 @@
 {
     "rpak":
     [
-        "mp_rr_desertlands_64k_x_64k"
+        "mp_rr_desertlands_64k_x_64k",
+		"mp_rr_canyonlands_mu1_night",
+        "GibbyLobaFinisher",
+		"emotescustom"
     ],
 	"stbsp": "mp_rr_desertlands_64k_x_64k"
 }
